--- a/sd.html
+++ b/sd.html
@@ -77,8 +77,8 @@
 			const jumlahSD = generate21+generate22+generate23+generate24;
 			console.log("jumlahSD:"+jumlahSD);
 
-			document.getElementById('sd').innerHTML= Math.sqrt(jumlahSD/(4-1));	
-			document.getElementById('bulatanSD').innerHTML= parseInt(Math.sqrt(jumlahSD/(4-1)));	
+			document.getElementById('sd').innerHTML= Math.sqrt(jumlahSD/4);	
+			document.getElementById('bulatanSD').innerHTML= parseInt(Math.sqrt(jumlahSD/4));	
 		}
 	</script>
 </body>
